# rs-core

./: README.md
docs/: alias.md  arithmetic.md  astronomy.md  bitwise-integer.md  character.md  compress.md  constants.md  core.md  dice.md  enum.md  format.md  global.md  hash.md  index.md  interpolate.md  io.md  iterator.md  linear-algebra.md  log.md  markup.md  mp-integer.md  random.md  range.md  rational.md  ring-buffer.md  root-finding.md  scope-guard.md  scope.md  statistics.md  string.md  terminal.md  thread-pool.md  topological.md  typelist.md  typename.md  uint128.md  uuid.md  version.md
notes/: maths-functions.txt  numeric-limits.txt
src/: CMakeLists.txt  rs-core.hpp
src/rs-core/: alias.hpp  arithmetic.hpp  astronomy.hpp  bitwise-integer.hpp  character.hpp  compress.hpp  constants.hpp  core.hpp  dice.hpp  enum.hpp  format.hpp  global.hpp  hash.hpp  interpolate.hpp  io.hpp  iterator.hpp  linear-algebra.hpp  log.hpp  markup.hpp  mp-integer.hpp  random.hpp  range.hpp  rational.hpp  ring-buffer.hpp  root-finding.hpp  scope-guard.hpp  scope.hpp  statistics.hpp  string.hpp  terminal.hpp  thread-pool.hpp  topological.hpp  typelist.hpp  typename.hpp  uint128.hpp  unit-test.hpp  uuid.hpp  version.hpp
src/test/: alias-core-test.cpp  alias-maths-test.cpp  alias-point-arithmetic-test.cpp  alias-test.cpp  arithmetic-conversion-test.cpp  arithmetic-division-test.cpp  arithmetic-function-test.cpp  arithmetic-parsing-test.cpp  arithmetic-test.cpp  astronomy-test.cpp  bitwise-integer-large-binary-100-test.cpp  bitwise-integer-large-binary-35-test.cpp  bitwise-integer-misc-test.cpp  bitwise-integer-small-binary-35-test.cpp  bitwise-integer-small-binary-5-test.cpp  character-test.cpp  compress-test.cpp  constants-test.cpp  core-arithmetic-test.cpp  core-character-test.cpp  core-enum-test.cpp  core-format-test.cpp  core-hash-test.cpp  core-io-test.cpp  core-iterator-test.cpp  core-parse-number-test.cpp  core-random-test.cpp  core-range-test.cpp  core-scope-guard-test.cpp  core-uuid-test.cpp  dice-basic-test.cpp  dice-set-test.cpp  dice-state-test.cpp  enum-test.cpp  format-floating-point-test.cpp  format-helper-test.cpp  format-integer-test.cpp  format-parsing-test.cpp  format-roman-test.cpp  format-test.cpp  (+53 more)
